Fixed awkward join button on mobile. No press tab for unstarted games.

--- a/client/app/components/gamelistitem/gamelistitem.scss
+++ b/client/app/components/gamelistitem/gamelistitem.scss
@@ -14,8 +14,13 @@
         {
             color: #999;
             padding-left: 8px;
-            padding-bottom: 16px;
+            padding-bottom: 10px;
         }
+    }
+
+    #joinButtonMobile
+    {
+        margin-bottom: 16px;
     }
 }
 
